# otycyto

./: .gitignore  .pre-commit-config.yaml  404.html  CONTRIBUTING.rst  README.rst  index.html  objects.inv  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: publish.yml  python-package.yml
PackageSetupOverview/: index.html
QuickContribute/: index.html
docs/: QuickContribute.md  conf.py  getting-started.md  index.md  index.rst
getting-started/: index.html
reference/SUMMARY/: index.html
reference/otcyto/: index.html
reference/otcyto/check_pykeops/: index.html
reference/otcyto/geomloss/: index.html
reference/otcyto/geomloss/create_sphere/: index.html
reference/otcyto/io/: index.html
reference/otcyto/io/load_files_recursive/: index.html
reference/otcyto/otd_pairwise/: index.html
reference/otcyto/plot/: index.html
reference/otcyto/plot/display_cloud/: index.html
reference/otcyto/plot/display_cloud_mapping/: index.html
reference/otcyto/plot/figure_clouds/: index.html
reference/otcyto/plot/figure_umap/: index.html
search/: search_index.json
src/otcyto/: check_pykeops.py  otd_pairwise.py  skeleton.py
src/otcyto/geomloss/: create_sphere.py
src/otcyto/io/: load_files_recursive.py
src/otcyto/plot/: display_cloud.py  display_cloud_mapping.py  figure_clouds.py
tests/: conftest.py  test_otd_pairwise.py  test_skeleton.py
