# setup.cfg — minimal, uv-friendly

[metadata]
name = otcyto
license_files = LICENSE.txt
url = https://github.com/pyscaffold/pyscaffold/
# Add here related links, for example:
project_urls =
    Documentation = https://pyscaffold.org/
#    Source = https://github.com/pyscaffold/pyscaffold/
#    Changelog = https://pyscaffold.org/en/latest/changelog.html
#    Tracker = https://github.com/pyscaffold/pyscaffold/issues
#    Conda-Forge = https://anaconda.org/conda-forge/pyscaffold
#    Download = https://pypi.org/project/PyScaffold/#files
#    Twitter = https://twitter.com/PyScaffold

# Add here all kinds of additional classifiers as defined under
# https://pypi.org/classifiers/
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python


[options]
zip_safe = False
include_package_data = True
packages = find_namespace:
package_dir =
    =src

[options.packages.find]
where = src
exclude =
    tests

[pyscaffold]
# Keep this so `putup --update .` works as intended
version = 4.6
package = otcyto
extensions =
    pre_commit